[gd_scene load_steps=16 format=3 uid="uid://bcmal22f68ct"]

[ext_resource type="Texture2D" uid="uid://qx0hnomnrhu4" path="res://sprites/ui/pauseMenu.png" id="1_3j81s"]
[ext_resource type="Script" path="res://scenes/OptionsMenu.gd" id="1_y5tj4"]
[ext_resource type="Texture2D" uid="uid://c5ay1vtsnd05c" path="res://sprites/ui/volumeBar.png" id="2_wwpxd"]
[ext_resource type="Texture2D" uid="uid://cxymku0glbqcg" path="res://sprites/ui/optionsButton.png" id="3_ggs1m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ul0ad"]
atlas = ExtResource("2_wwpxd")
region = Rect2(2, 4, 8, 8)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_krux3"]
color = Color(0.909804, 0.643137, 0.345098, 1)
grow_begin = 0.0
grow_end = 0.0
thickness = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_2jxmc"]
atlas = ExtResource("3_ggs1m")
region = Rect2(0, 0, 112, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rhik"]
atlas = ExtResource("3_ggs1m")
region = Rect2(224, 0, 112, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu8c6"]
atlas = ExtResource("3_ggs1m")
region = Rect2(112, 0, 112, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmya7"]
atlas = ExtResource("3_ggs1m")
region = Rect2(0, 30, 112, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7qpo"]
atlas = ExtResource("3_ggs1m")
region = Rect2(224, 30, 112, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_o017e"]
atlas = ExtResource("3_ggs1m")
region = Rect2(112, 30, 112, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukkqg"]
atlas = ExtResource("3_ggs1m")
region = Rect2(0, 60, 112, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_5equd"]
atlas = ExtResource("3_ggs1m")
region = Rect2(224, 60, 112, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kfnw"]
atlas = ExtResource("3_ggs1m")
region = Rect2(112, 60, 112, 30)

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -220.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y5tj4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_3j81s")

[node name="musicVolume" type="HSlider" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 13.0
offset_top = 154.0
offset_right = 82.0
offset_bottom = 170.0
theme_override_icons/grabber = SubResource("AtlasTexture_ul0ad")
theme_override_icons/grabber_highlight = SubResource("AtlasTexture_ul0ad")
theme_override_icons/grabber_disabled = SubResource("AtlasTexture_ul0ad")
theme_override_styles/slider = SubResource("StyleBoxLine_krux3")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_krux3")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_krux3")
max_value = 1.0
step = 0.001
value = 1.0

[node name="sfXVolume" type="HSlider" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 96.0
offset_top = 154.0
offset_right = 165.0
offset_bottom = 170.0
theme_override_icons/grabber = SubResource("AtlasTexture_ul0ad")
theme_override_icons/grabber_highlight = SubResource("AtlasTexture_ul0ad")
theme_override_icons/grabber_disabled = SubResource("AtlasTexture_ul0ad")
theme_override_styles/slider = SubResource("StyleBoxLine_krux3")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_krux3")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_krux3")
max_value = 1.0
step = 0.001
value = 1.0

[node name="ContinueButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -60.0
offset_right = 59.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_2jxmc")
texture_pressed = SubResource("AtlasTexture_8rhik")
texture_hover = SubResource("AtlasTexture_pu8c6")

[node name="RestartButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -30.0
offset_right = 59.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_jmya7")
texture_pressed = SubResource("AtlasTexture_v7qpo")
texture_hover = SubResource("AtlasTexture_o017e")

[node name="ExitButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_right = 59.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_ukkqg")
texture_pressed = SubResource("AtlasTexture_5equd")
texture_hover = SubResource("AtlasTexture_7kfnw")

[connection signal="value_changed" from="musicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="sfXVolume" to="." method="_on_sf_x_volume_value_changed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
