extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_music_volume_value_changed(value):
	pass # Replace with function body.


func _on_sf_x_volume_value_changed(value):
	pass # Replace with function body.


func _on_continue_button_pressed():
	self.position.y = -220


func _on_restart_button_pressed():
	pass # Replace with function body.


func _on_exit_button_pressed():
	pass # Replace with function body.
